<resources>
    <string name="verify_link_handler_label" translatable="false">Muun</string>
    <string name="authorize_link_handler_label" translatable="false">Muun</string>
    <string name="confirm_link_handler_label" translatable="false">Muun</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yes_cancel">Yes, cancel</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="retry">Retry</string>
    <string name="send_report">Send report</string>
    <string name="abort">Abort</string>
    <string name="available_balance">Balance</string>
    <string name="selected">Selected</string>
    <string name="why"><annotation link="why">Why?</annotation></string>
    <string name="no_internet">Lost internet connection</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="backspace">Backspace</string>
    <string name="long_date_format">%s at %s%s</string>
    <string name="not_available">Not available</string>
    <string name="open_app">Open app</string>
    <string name="loading">Loading...</string>
    <string name="contacting">Contacting</string>
    <string name="overflow_menu_hint">Overflow</string>
    <string name="google_play_services_not_available">
        It seems Google Play Services is not available on this mobile device. Muun needs it to send
        push notifications for Lightning payments. Please, install Google Play Services and try
        again.
    </string>
    <string name="fcm_token_not_available">
        The Android notification service is not responding. Please try again.
    </string>
    <string name="new_operation_title">New payment</string>
    <string name="operation_detail_title">Payment details</string>
    <string name="showqr_title">Receive</string>
    <string name="scanqr_title">Send</string>
    <string name="scanqr_drawer_title">Use address in clipboard</string>
    <string name="scanqr_drawer_no_address">Payment request from %s</string>
    <string name="scanqr_drawer_no_address_no_host">Payment request from a merchant</string>
    <string name="scanqr_drawer_ln_invoice_title">Use invoice in clipboard</string>
    <string name="grant_camera_permission_button">Enable camera</string>
    <string name="camera_permission_request_title">
        Scan a bitcoin or lightning QR code
    </string>
    <string name="camera_permission_request">
        Enable your camera to scan QR codes with addresses or invoices
    </string>
    <string name="new_operation_to">To</string>
    <string name="new_operation_to_hint">Enter a bitcoin address or invoice</string>
    <string name="new_operation_dialog_full_address">Full address</string>
    <string name="new_operation_note_hint">Write a note</string>
    <string name="new_operation_total">Total</string>
    <string name="new_operation_fee">Network fee</string>
    <string name="new_operation_amount">Amount</string>
    <string name="new_operation_use_all_funds">Use all funds</string>
    <string name="new_operation_note">Note</string>
    <string name="new_operation_confirm">Send</string>
    <string name="new_operation_resolving">Loading payment details</string>
    <string name="new_operation_receiving_node_data">Receiving node details</string>
    <string name="new_operation_invoice_exp_prefix">This invoice will expire in</string>
    <string name="new_operation_invoice_exp_weeks">%d weeks and %d days</string>
    <string name="new_operation_invoice_exp_days">%d days and %d hours</string>
    <string name="new_operation_invoice_exp_hours">%d hours and %d minutes</string>
    <string name="new_operation_invoice_exp_minutes">%02d:%02d</string>
    <string name="new_operation_invoice_exp_seconds">%02d:%02d</string>
    <string name="confirm_amount">confirm amount</string>
    <string name="confirm_note">confirm note</string>
    <string name="title_new_operation">Send bitcoin</string>
    <string name="new_operation_abort_alert_title">Cancel payment?</string>
    <string name="new_operation_abort_alert_body">
        Do you want to cancel this payment and go back to the home screen?
    </string>
    <string name="new_operation_swap_title">Pay via lightning</string>
    <string name="new_operation_receiving_node_public_key">
        <![CDATA[<b>Public keys:</b> %s]]>
    </string>
    <string name="new_operation_receiving_node_network_address">
        <![CDATA[<b>Network address:</b> %s]]>
    </string>
    <string name="see_in_node_explorer">Open in node explorer</string>
    <string name="new_op_1_conf_notice_banner">
        This payment may take longer than most lightning payments.
        <annotation link="link">Why?</annotation>
    </string>
    <string name="new_op_1_conf_notice_title">Why will this payment take longer?</string>
    <string name="new_op_1_conf_notice_desc">
        This lightning payment requires a confirmed on-chain transaction. It takes an average of
        10 minutes to confirm.
    </string>
    <string name="error_op_insufficient_funds">You don\’t have enough funds</string>
    <string name="error_op_insufficient_funds_desc">
            You don\’t have enough funds to cover this payment and the network fee.
    </string>
    <string name="error_op_invoice_unreachable_node_title">This invoice can\'t be paid</string>
    <string name="error_op_invoice_unreachable_node_desc">
        This invoice was created by a private node that can\'t be reached. To reach it, the invoice
        must include extra data (RouteHints). This issue can only be fixed by the invoice creator.
    </string>
    <string name="error_op_invoice_no_route_title">There is no available route</string>
    <string name="error_op_invoice_no_route_desc">
        There\'s no route with enough capacity to make this payment. Please, reach out to our
        <annotation link="support">support team</annotation> and let us know what happened. We’ll
        be happy to help.
    </string>
    <string name="error_op_invoice_will_expire_soon_title">
        This payment needs a longer expiration time
    </string>
    <string name="error_op_invoice_will_expire_soon_desc">
        Please request a new invoice with an expiration time of at least one hour,
        or try scanning an invoice with a smaller amount.
    </string>
    <string name="error_op_invoice_expired_title">This invoice has expired</string>
    <string name="error_op_invoice_expired_desc">
        This invoice expired before the payment was made. Please, create or request a new one.
    </string>
    <string name="error_op_invoice_used_title">This invoice has already been used</string>
    <string name="error_op_invoice_used_desc">
        This invoice has already been scanned or paid by another wallet. Please create or request
        a new one.
    </string>
    <string name="error_op_invoice_invalid_amount_title">
        This invoice doesn\’t include an amount
    </string>
    <string name="error_op_invoice_invalid_amount_desc">
        At the moment, you can only pay to invoices that include an amount. Please, create or
        request a new one.
    </string>
    <string name="error_op_invoice_invalid_title">Unable to pay this invoice</string>
    <string name="error_op_invoice_invalid_desc">Please try with another invoice</string>
    <string name="login_email_title">Enter your email</string>
    <string name="login_email_explanation">
        You chose it when you set up your wallet.
    </string>
    <string name="login_email_input_hint">Your email</string>
    <string name="login_email_action">Continue</string>
    <string name="signup_unlock_title">Enter your password</string>
    <string name="signup_unlock_forgot">I forgot my password</string>
    <string name="signup_unlock_continue">Continue</string>
    <string name="signup_unlock_password_hint">Your password</string>
    <string name="signup_unlock_password_reminder">
        <![CDATA[<b>Reminder:</b> it had at least 8 characters. This was the only restriction.]]>
    </string>
    <string name="create_email_title">Enter your email</string>
    <string name="create_email_subtitle">
        You will receive a verification link.
        <annotation link="why">How will Muun use my email?</annotation>
    </string>
    <string name="create_email_input_hint">Your email</string>
    <string name="create_email_action">CONFIRM EMAIL</string>
    <string name="create_password_title">Create your password</string>
    <string name="create_password_subtitle">
        Choose something memorable. If possible, avoid old passwords you\'re already using.
    </string>
    <string name="create_password_input_hint">Your password</string>
    <string name="create_password_confirm_input_hint">Confirm your password</string>
    <string name="create_password_input_helper">At least 8 characters long</string>
    <string name="create_password_action">Continue</string>
    <string name="create_email_help_link">
        <annotation link="help">I need help</annotation>
    </string>
    <string name="recovery_code_verify_accept_explanation_title">
        Two things you must understand
    </string>
    <string name="recovery_code_verify_accept_condition_1">
        I understand I will need my Recovery Code if I forget my password.
    </string>
    <string name="recovery_code_verify_accept_condition_2">
        I understand Muun doesn\'t keep a copy of my Recovery Code, and it can\'t be changed.
    </string>
    <string name="recovery_code_accept">FINISH</string>
    <string name="enter_old_password_explanation_title">Enter your password</string>
    <string name="enter_old_password_explanation">Verify you own this wallet.</string>
    <string name="enter_old_password_hint">Current password</string>
    <string name="use_recovery_code">Use Recovery Code</string>
    <string name="enter_old_password_continue">Start</string>
    <string name="change_password_title">Enter your new password</string>
    <string name="change_password_hint">New password</string>
    <string name="change_password_helper_text">@string/create_password_input_helper</string>
    <string name="change_password_confirm_input_hint">@string/create_password_confirm_input_hint</string>
    <string name="change_password_condition">
        I understand that my previous password is no longer valid.
    </string>
    <string name="change_password_continue">Confirm new password</string>
    <string name="ek_save_title">Save your Emergency Kit</string>
    <string name="ek_save_explanation">
        We recommend using cloud storage, to ensure your kit is never lost.
        <annotation link="why">Is that safe?</annotation>
    </string>
    <string name="ek_verify_title">Verify your Emergency Kit</string>
    <string name="ek_verify_explanation">
        Enter the verification code located in the top-right corner of the document, just to ensure
        everything went right.
    </string>
    <string name="ek_verify_hint">123456</string>
    <string name="ek_verify_helper">6-digit code</string>
    <string name="ek_verify_need_help"><annotation link="help">Need help?</annotation></string>
    <string name="ek_verify_action">Verify code</string>
    <string name="recover_with_recovery_code">Recover with Recovery Code</string>
    <string name="save_option_drive_title">Save to Drive</string>
    <string name="save_option_drive_description">
        Use your Google account to save and access your kit.
    </string>
    <string name="save_option_feedback_title">Suggest another cloud</string>
    <string name="save_option_feedback_description">
        Tell us which cloud service you would like us to support.
    </string>
    <string name="save_link_manual">
        <annotation link="no_cloud">I don\’t want to use cloud storage</annotation>
    </string>
</resources>