<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        android:id="@+id/button_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                style="@style/explanation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:textSize="24sp"
                android:text="@string/ek_verify_title" />

        <TextView
                style="@style/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/ek_verify_explanation" />

        <io.muun.apollo.presentation.ui.view.MuunTextInput
                android:id="@+id/code_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="48sp"
                android:maxLength="6"
                android:minEms="4"
                android:hint="@string/ek_verify_hint"
                android:inputType="numberDecimal"
                app:hintEnabled="false"
                app:helperText="@string/ek_verify_helper"
                app:helperTextVisibility="visible"
                />

        <io.muun.apollo.presentation.ui.view.HtmlTextView
                android:id="@+id/need_help"
                style="@style/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/ek_verify_need_help" />
    </LinearLayout>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/ek_verify_action"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ek_verify_action"
            />
</io.muun.apollo.presentation.ui.view.MuunButtonLayout>