<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/muun_screen_margin">

            <TextView
                    style="@style/explanation_title"
                    android:layout_marginBottom="8dp"
                    android:text="@string/create_password_title" />

            <TextView
                    style="@style/explanation"
                    android:text="@string/create_password_subtitle" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/create_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:hint="@string/create_password_input_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    app:helperText="@string/create_password_input_helper"
                    app:passwordToggleEnabled="true" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/create_password_confirm_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:hint="@string/create_password_confirm_input_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    app:helperText="@string/create_password_input_helper"
                    app:passwordToggleEnabled="true" />

        </LinearLayout>


    </ScrollView>

    <io.muun.apollo.presentation.ui.view.MuunButton
            android:id="@+id/create_password_confirm"
            style="@style/muun_button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_password_action" />

</io.muun.apollo.presentation.ui.view.MuunButtonLayout>