<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <TextView
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                style="@style/explanation_title"
                android:text="@string/recovery_code_verify_accept_explanation_title" />

        <CheckBox
                style="@style/explanation_checkbox"
                android:id="@+id/recovery_code_condition_1"
                android:text="@string/recovery_code_verify_accept_condition_1" />

        <CheckBox
                style="@style/explanation_checkbox"
                android:id="@+id/recovery_code_condition_2"
                android:text="@string/recovery_code_verify_accept_condition_2" />

    </LinearLayout>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/recovery_code_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_code_accept"
            />
</io.muun.apollo.presentation.ui.view.MuunButtonLayout>