<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/muun_screen_margin"
                android:orientation="vertical">

            <TextView
                    android:layout_marginBottom="8dp"
                    style="@style/explanation_title"
                    android:text="@string/create_email_title" />

            <io.muun.apollo.presentation.ui.view.HtmlTextView
                    android:id="@+id/create_email_subtitle"
                    style="@style/explanation"
                    android:text="@string/create_email_subtitle" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/create_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:imeOptions="actionNext"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:hint="@string/create_email_input_hint" />

            <io.muun.apollo.presentation.ui.view.HtmlTextView
                    android:id="@+id/create_email_used_help"
                    android:layout_marginTop="16dp"
                    style="@style/explanation"
                    android:gravity="left"
                    android:text="@string/create_email_help_link"
                    android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/create_email_action"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_email_action" />

</io.muun.apollo.presentation.ui.view.MuunButtonLayout>