<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        tools:viewBindingIgnore="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/muun_screen_margin"
                android:paddingRight="@dimen/muun_screen_margin"
                android:orientation="vertical">

            <TextView
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    style="@style/explanation_title"
                    android:text="@string/change_password_title" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/change_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:fontFamily="sans-serif"
                    android:hint="@string/change_password_hint"
                    app:helperText="@string/change_password_helper_text" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/change_password_confirm_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:hint="@string/change_password_confirm_input_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    app:helperText="@string/change_password_helper_text"
                    app:passwordToggleEnabled="true" />

            <CheckBox
                    style="@style/explanation_checkbox"
                    android:id="@+id/change_password_condition"
                    android:text="@string/change_password_condition" />

                <View style="@style/expander" />

        </LinearLayout>

    </ScrollView>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/change_password_continue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/change_password_continue" />

</io.muun.apollo.presentation.ui.view.MuunButtonLayout>