<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/muun_screen_margin"
                android:paddingRight="@dimen/muun_screen_margin"
                android:orientation="vertical"
        >

            <TextView
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    style="@style/explanation_title"
                    android:text="@string/enter_old_password_explanation_title"
            />

            <TextView
                    style="@style/explanation"
                    android:textSize="16sp"
                    android:text="@string/enter_old_password_explanation"
            />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/enter_old_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:fontFamily="sans-serif"
                    android:hint="@string/enter_old_password_hint"
            />

            <io.muun.apollo.presentation.ui.view.MuunButton
                    style="@style/muun_button_secondary"
                    android:id="@+id/use_recovery_code"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/use_recovery_code"
                    android:textStyle="normal"
                    android:background="@android:color/transparent"
            />

            <View style="@style/expander" />

        </LinearLayout>

    </ScrollView>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/change_password_continue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/enter_old_password_continue"
    />

</io.muun.apollo.presentation.ui.view.MuunButtonLayout>