<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MuunButtonLayout
        tools:viewBindingIgnore="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/muun_screen_margin"
                android:orientation="vertical">

            <TextView
                    android:layout_marginBottom="16dp"
                    style="@style/explanation_title"
                    android:text="@string/signup_unlock_title" />

            <io.muun.apollo.presentation.ui.view.MuunTextInput
                    android:id="@+id/signup_unlock_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:fontFamily="sans-serif"
                    android:hint="@string/signup_unlock_password_hint" />

            <io.muun.apollo.presentation.ui.view.HtmlTextView
                    android:id="@+id/signup_unlock_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    android:textSize="14sp"
                    android:text="@string/signup_unlock_password_reminder" />

        </LinearLayout>

    </ScrollView>

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_secondary"
            android:id="@+id/signup_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_unlock_forgot" />

    <io.muun.apollo.presentation.ui.view.MuunButton
            style="@style/muun_button_primary"
            android:id="@+id/signup_continue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/signup_unlock_continue" />

</io.muun.apollo.presentation.ui.view.MuunButtonLayout>